<resources>
    <string name="app_name">Buku Saku Gizi Prakonsepsi</string>
    <string name="version_history">RELEASE v1.1.0</string>
    <string name="credeativesukses">Created With ❤ by Credeative.</string>
    <string name="title_activity_introactivity">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="pengertian_gizi">Dieny, Fillah. dkk. (2019:2) prakonsepsi adalah periode sebelum hamil atau sebelum terjadinya pembuahan antara sel ovum dan sel sperma. Beberapa hal yang harus dipersiapkan sebelum merencanakan kehamilan antara lain menjaga kesehatan organ reproduksi dan kebutuhan akan gizi seimbang. Sehingga gizi prakonsepsi merupakan kebutuhan gizi yang diperlukan selama masa prakonsepsi.</string>
    <string name="karakteristik_fisiologis">Sistem reproduksi pada wanita dan pria sudah berkembang sejak 1 bulan setelah fase konsepsi dimulai, kemudian untuk perkembangan ukuran dan fungsi terjadi selama pubertas. Seorang wanita dilahirkan dengan ovum yang belum matang, kemudian ovum akan mengalami ovulasi atau kematangan selama masa subur. Sedangkan pada pria kemampuan reproduksi ditentukan dari adanya interaksi kompleks antara hipotalamus, kelenjar pituitari, dan testis.</string>
    <string name="berapa_karakter">Beberapa karakteristik sosial diantaranya adalah sebagai berikut: 1) adanya semangat bersaing dalam persaingan di lingkungan masyarakat maupun karir \n 2) individu cenderung memilih mencari pengalaman sebanyak-banyaknya dan mulai memiliki harapan realistis yang berpedoman pada nilai-nilai tertentu \n 3) individu cenderung akan mencari kelompok yang mempunyai paham yang sama atau serupa \n 4) individu akan memulai menentukan keinginan dan minat dengan pasangan hidupnya, serta mulai mengabaikan hak-hak pribadi karena yang menjadi kepentingan utama adalah keluarga</string>
    <string name="karakter_sos_jelasno">Dari aspek psikologis, periode prakonsepsi ditandai dengan terjadinya masa transisi fisik, intelektual, dan peran sosial. Berbagai masalah akan muncul sebagai dampak dari ketergantungan ke masa , baik dari segi ekonomi, kebebasan, menentukan diri sendiri, maupun pandangan tentang masa depan.</string>
    <string name="pengertian_status">status gizi adalah suatu keadaan yang diakibatkan oleh keseimbangan antara asupan makanan dan kebutuhan zat gizi dalam bentuk variabel tertentu.</string>
    <string name="adabeberapas">Ada beberapa zat gizi penting yang harus diprioritaskan pada periode prakonsepsi, Dewantari (2013) menyebutkan bahwa zat gizi yang harus diperhatikan adalah vitamin A, vitamin D, vitamin E, vitamin C, vitamin B6, asam folat, vitamin B12, zat besi, seng, selenium, dan kalsium. Selain itu, makanan yang megandung karbohidrat, lemak, dan protein juga harus dalam kondisi yang cukup sebagai sumber energi.</string>
    <string name="kab_1">Berdasarkan dari rekomendasi WHO (1990) kebutuhan karbohidrat berkisar 55% sampai 70% dari total kebutuhan energi, diutamakan dari karbohidrat kompleks dan karbohidrat sederhana hanya 10%. Jumlah minimum konsumsi karbohidrat diperkirakan 50 gram/hari untuk menghindari ketosis.</string>
    <string name="kab_2">Sumber utama karbohidrat adalah padi-padian atau serealia, umbi-umbian, kacang-kacangan kering, dan gula.</string>
    <string name="prot_1iwi">Kebutuhan protein berdasarkan dari Angka Kecukupan Gizi (AKG) 2019 untuk wanita remaja hingga dewasa sebesar 60 gram tiap harinya.</string>
    <string name="fats_17815">Kebutuhan lemak berdasarkan dari AKG 2019 untuk wanita remaja hingga dewasa sebesar 60-65 gram per harinya.</string>
    <string name="sumber_fatsss_01917">Sumber utama lemak diperoleh dari minyak tumbuh-tumbuhan (minyak kelapa, kacang tanah, kacang kedelai, dan jagung), mentega, margarin, telur, krim, susu, dan lemak hewan (daging dan ikan).</string>
    <string name="vitamina_1">Kebutuhan vitamin A berdasarkan AKG 2019 untuk wanita remaja hingga dewasa sebesar 600 RE dan untuk ibu hamil diperlukan penambahan vitamin A sebesar 300 RE untuk kebutuhan janin dan persiapan induk untuk menyusui.</string>
    <string name="vitamina_2">Sumber vitamin A berasal dari hati, kuning telur, susu, dan mentega. Sedangkan sumber karoten berasal dari sayuran yang berwarna hijau tua dan buah-buahan yang berwarna kuning-merah, seperti daun singkong, bayam, kangkong, wortel, tomat, manga, papaya, dan jeruk</string>
    <string name="akibat_vitd">Akibat dari kekurangan vitamin D dapat menurunkan kesuburan hingga 75% dan dapat menyebabkan gangguan metabolisme kalsium pada ibu hamil dan janinnya</string>
    <string name="vitamin_eadlah">Vitamin E adalah vitamin larut lemak yang berperan penting dalam menghambat radikal bebas. Vitamin E dapat mencegah keguguran dengan berfungsi sebagai antioksidan yang dapat menjaga kerusakan ovum. Selain itu, didalam lapisan fosfolipida membrane sel vitamin E berperan dalam melindungi asam lemak tidak jenuh ganda dan komponen memberan sel dari oksidasi radikal bebas.</string>
    <string name="vit_e2">Vitamin E terdapat dalam minyak tumbuh-tumbuhan, sayuran dan buah-buahan. vitamin E paling banyak ditemukan di kacang kedelai dan jagung.</string>
    <string name="vitc_adalah">Vitamin C berperan penting dalam fungsi ovarium dan pembentukan sel telur. Selain sebagai antioksidan, vitamin C juga berperan dalam melindungi sel tubuh dari radikal bebas yang dapat mempengaruhi kesehatan sistem reproduksi.</string>
    <string name="vitc_2">Kebutuhan vitamin C berdasarkan dari AKG 2019 untuk wanita remaja hingga dewasa sebesar 75 mg</string>
    <string name="vitc_3">Vitamin C terdapat dalam pangan nabati seperti jeruk, nanas, rambutan, papaya, dan tomat (Almatsier, 2010:189).</string>
    <string name="vitb6_adalah">Kekurangan vitamin B6 dapat meneybabkan ketidakseimbangan hormon. Selama masa konsepsi keseimbangan hormon harus diperhatikan untuk mengurangi risiko masalah kesehatan, diantaranya adalah hormon estrogen dan progesteron.</string>
    <string name="vitb6_adalah2">Selain itu vitamin B6 juga berfungsi dalam sintesis hemoglobin sehingga apabila kekurangan vitamin B6 dapat menyebabkan anemia.</string>
    <string name="asamvolat_adalah">Menurut Goetzl (2017) dalam Claudhya (2018) asam folat berperan penting dalam fase pembentukan sistem saraf pusat pada janin. Konsumsi asam folat pada periode prakonsepsi dapat menurunkan angka kejadian anemia dalam kehamilan sehingga dapat menurunkan risiko terjadinya preeklampsia dan neural tube defects. Selain itu menurut Moussa, dkk (2016) dalam Claudhya (2018) asam folat dapat mencegah terjadinya hambatan pertumbuhan janin dan menurunkan risiko terjadinya autisme.</string>
    <string name="vitb12_adalah">Kekurangan vitamin B12 dapat mengganggu sintesis DNA dan pematangan sel darah merah, mempengaruhi perkembangan organ janin sehingga dapat menyebabkan cacat lahir.</string>
    <string name="zatbesi">Kondisi anemia tidak boleh terus berlanjut sampai memasuki periode kehamilan karena sangat berisiko baik terhadap ibu dan bayi. Oleh karena itu zat besi merupakan suatu zat gizi penting yang harus dipenuhi kecukupan kebutuhannya pada periode prakonsepsi.</string>
    <string name="zatbesi2">Jumlah kebutuhan zat besi menurut AKG 2019 untuk wanita remaja-dewasa adalah 18 mg per harinya. Selain itu, Depkes (2011) juga merekomendasikan untuk mengonsumsi 1 tablet suplemen zat besi per hari pada saat satu hari menjelang dan selama menstruasi.</string>
    <string name="zatbesi3">Sumber zat besi berasal dari hewani seperti daging, ayam, ikan, dan berasal dari nabati seperti sayuran berwarna hijau, dan kacang-kacangan.</string>
    <string name="anemiaadel"><![CDATA[Anemia merupakan keadaan dimana jumlah kadar hemoglobin (Hb) kurang dari normal (<12 gr/dL), sedangkan pada ibu hamil dikatakan anemia apabila kadar Hb <11gr/dL. Berdasarkan data Riskesdas tahun 2018, prevalensi anemia di Indonesia masih cukup tinggi, yaitu prevalensi pada wanita hamil adalah 48,9% sebagian besarnya adalah wanita berusia 15-24 tahun.]]></string>
    <string name="penyebab_anem">Chapman dan Hall (1995) dan ILSI (1999) dalam Amalia dan Agustyas (2016) mengatakan bahwa faktor utama penyebab terjadinya anemia adalah asupan zat besi yang kurang. Dan faktor pendukung lainnya adalah gaya hidup yang tidak sehat antara lain merokok, minum minuman keras, keadaan ekonomi dan demografi, pendidikan, umur, dan jenis kelamin.</string>
    <string name="penyebab_anemi2">Penyebab anemia gizi besi bukan hanya karena kurangnya asupan zat besi saja, Dieny, Ayu, dan Dewi (2019:51-52) berpendapat bahwa pembentukan hemoglobin berhubungan dengan interaksi beberapa zat gizi antara lain protein, vitamin A, vitamin C, vitamin B2, vitamin B6, vitamin B12, seng, dan folat. Sehingga selain konsumsi zat besi yang cukup juga diperlukan konsumsi zat gizi lainnya.</string>
    <string name="gejala_anemia">Schrier SL. (2011) dalam Amalia dan Agustyas (2016) mengatakan bahwa gejala utama yang terjadi pada anemia adalah fatigue, nadi terasa lebih cepat, terdapat tanda hiperdinamik, yaitu denyut nadi yang kuat dan jantung berdebar. Sedangkan pada anemia yang lebih berat, dapat menimbulkan letargi, konfusi, dan komplikasi yang dapat mengancap jiwa.</string>
    <string name="kurang_energi"><![CDATA[Kekurangan Energi Kronis dapat ditandai dengan lingkar lengan atas (LLA) <23,5 cm dan Indeks Massa Tubuh <18,5 kg/m2. Kekurangan energi kronis berhubungan erat dengan anemia, hal ini sejalan dengan penelitian yang dilakukan oleh Huriyah, Siti, dan Suherni (2013) yang menyatakan bahwa ibu hamil yang mengalami kekurangan energi kronis memiliki risiko mengalami anemia 1,748 kali lebih besar daripada pada ibu hamil yang tidak mengalami kekurangan energi kronis. Selain itu, apabila ibu hamil sebelum melahirkan mengalami kekurangan energi kronis maka akan meningkatkan risiko anemia. Dari hasil penelitian Aminin, Atika, dan Ria (2014) berpendapat bahwa kekurangan energi kronis yang dialami oleh ibu hamil disebabkan karena kekurangan gizi yang telah berlangsung lama atau menahun.]]></string>
    <string name="obesitasss">World Health Organization (2013) mengatakan bahwa obesitas merupakan akumulasi abnormal dari lemak tubuh yang dapat menyebabkan risiko kesehatan. Hal tersebut juga dapat terjadi pada ibu hamil, berdasarkan penelitian yang dilakukan oleh Astriana, Susilawati, dan Ike (2016) obesitas berdampak negative pada ibu dan bayi yang dikandungnya, salah satu dampak yang sangat berisiko adalah terjadinya hipertensi. Selain berdampak pada ibu, obesitas juga dapat berdampak pada bayi dalam kandungan, Mustofa dan Yesi (2015) berpendapat bahwa ibu yang mengalami obesitas sejak sebelum kehamilan dapat berisiko melahirkan bayi dengan kelainan kongenital atau kelaianan struktur.</string>
    <string name="imt1">Untuk melakukan pengukuran IMT dapat dilakukan dengan membandingkan rasio antara berat badan (kg) dan tinggi badan (m).</string>
    <string name="lla">Cara untuk mengukur LLA adalah dengan mengukur lingkar lengan kiri atas dengan bantuan pita LLA. Menurut Kemenkes RI (2013) jika pengukuran LLA hasilnya dibawah 23,5 cm, maka wanita tersebut dikatakan mengalami risiko Kurang Energi Kronis dan diperkirakan akan melahirkan berat bayi lahir rendah.</string>
    <string name="rlpp">Pengukuran rasio lingkar pinggang dan panggul bertujuan untuk mengetahui status obesitas sentral atau abdominal dengan cara mengukur rasio lingkar pinggang berdasarkan lingkar panggul. Nilai ambang batas untuk wanita usia subur adalah 0,85.</string>
    <string name="lmktubh">Pengukuran presentase lemak tubuh digunakan untuk memperkirakan jumlah lemak dalam tubuh berdasarkan lemak yang ada di bawah kulit.</string>
    <string name="faktor_berikur">Dieny, Ayu, dan Dewi (2019:21) menjelaskan bahwa status gizi dapat dipengaruhi oleh dua faktor, yaitu faktor internal dan eksternal. </string>
</resources>