<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".mg1.main_mg1">

    <LinearLayout
        android:id="@+id/heading"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/subhead1"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/kembali"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_arrow_leftz"
                android:background="@color/white"
                android:foregroundGravity="right"
                android:layout_marginStart="8dp"
                android:layout_width="50dp"
                android:layout_height="50dp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/subhead2"
            android:gravity="left"

            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="Masalah Gizi"
                android:textAllCaps="false"
                android:layout_gravity="left"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/hnlight"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:textSize="28dp"/>


        </LinearLayout>

    </LinearLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="4dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="4dp"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:foregroundGravity="left"
                    android:id="@+id/gizi_pee">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/gizi_ps"
                        android:layout_width="375dp"
                        android:layout_height="165dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/masalah_gisub"
                        android:hapticFeedbackEnabled="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.509"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.6" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/hnmedium"
                    android:text="Anemia"
                    android:textColor="@color/black"
                    android:textSize="18dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/hnmedium"
                    android:text="a. Pengertian Anemia "
                    android:textColor="@color/black"
                    android:textSize="12dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/hnregular"
                    android:text="@string/anemiaadel"
                    android:textColor="@color/rodok_black"
                    android:textSize="12dp"/>

                <ImageView
                    android:layout_width="329dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:background="@drawable/anemia"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/hnmedium"
                    android:text="b. Penyebab Anemia "
                    android:textColor="@color/black"
                    android:textSize="12dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/hnregular"
                    android:text="@string/penyebab_anem"
                    android:textColor="@color/rodok_black"
                    android:textSize="12dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/hnregular"
                    android:text="@string/penyebab_anemi2"
                    android:textColor="@color/rodok_black"
                    android:textSize="12dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/hnmedium"
                    android:text="c. Gejala Anemia "
                    android:textColor="@color/black"
                    android:textSize="12dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/hnregular"
                    android:text="@string/gejala_anemia"
                    android:textColor="@color/rodok_black"
                    android:textSize="12dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/hnmedium"
                    android:text="Kekurangan Energi Kronis "
                    android:textColor="@color/black"
                    android:textSize="18dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/hnregular"
                    android:text="@string/kurang_energi"
                    android:textColor="@color/rodok_black"
                    android:textSize="12dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/hnmedium"
                    android:text="Obesitas"
                    android:textColor="@color/black"
                    android:textSize="18dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/hnregular"
                    android:text="@string/obesitasss"
                    android:textColor="@color/rodok_black"
                    android:textSize="12dp"/>



            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/hnmedium"
                android:text="Baca Halaman Selanjutnya "
                android:textColor="@color/black"
                android:textSize="18dp"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="left"
                android:foregroundGravity="left">

                <Button
                    android:id="@+id/goto_kebuthgizi"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/ic_buttonsubmenu"
                    android:hapticFeedbackEnabled="true"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:fontFamily="@font/hnlight"
                    android:textSize="18dp"
                    android:paddingLeft="10dp"
                    android:text="Kebutuhan zat gizi prakonsepsi"
                    android:elevation="3dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.177"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.216" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:gravity="center"
                android:layout_marginBottom="180dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="left"
                android:foregroundGravity="left">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:outlineSpotShadowColor="@color/rodok_black"
                    android:background="@drawable/bg_suggest"
                    android:hapticFeedbackEnabled="true"
                    android:foregroundGravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.156"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:fontFamily="@font/hnmedium"
                        android:layout_marginBottom="16dp"
                        android:layout_marginEnd="32dp"
                        android:gravity="left"
                        android:text=" Diet Gizi Prakonsepsi"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/link1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:fontFamily="@font/hnmedium"
                        android:layout_marginEnd="32dp"
                        android:gravity="left"
                        android:text="Status Gizi "
                        android:textColor="@color/darkk_purple"
                        android:textSize="14sp" />
                    <TextView
                        android:id="@+id/link2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:fontFamily="@font/hnmedium"
                        android:layout_marginEnd="32dp"
                        android:gravity="left"
                        android:text="Gizi Prakonsepsi "
                        android:textColor="@color/darkk_purple"
                        android:textSize="14sp" />



                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>